--- a/gigapet/package.json
+++ b/gigapet/package.json
@@ -8,7 +8,9 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "react-select": "^2.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
